remove duplicate working better

--- a/ChatBotUI/templates/UltraBot_index.html
+++ b/ChatBotUI/templates/UltraBot_index.html
@@ -67,7 +67,7 @@
 
   <form id="upload-form" enctype="multipart/form-data">
     <input type="file" name="pdf" accept="application/pdf" />
-    <input type="submit" value="Upload PDF" />
+    <input type="submit" id = "submitbtn" value="Upload PDF" />
   </form>
   <!-- <div id="response"></div> -->
 
