fix json parsing

--- a/ChatBotUI/static/css/style2_ultrabot.css
+++ b/ChatBotUI/static/css/style2_ultrabot.css
@@ -216,15 +216,49 @@ body {
   margin-bottom: 10px;
 }
 
+
+
 .loader {
   display: none; /* Initially hide the loader */
   margin: 0 auto;
-  width: 20px;
-  height: 20px;
+  width: 60px;
+  text-align: center;
+}
+
+/* Styles for the dots */
+.loader span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
   border-radius: 50%;
-  border: 3px solid #ccc;
-  border-top-color: #555;
-  animation: spin 1s linear infinite;
+  margin-right: 5px;
+  animation: dotAnimation 1s infinite ease-in-out;
+}
+
+.loader span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+/* Animation keyframes */
+@keyframes dotAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 /* .popup {
